style. og image 추가, meta tag 설정

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://eunjeerun.vercel.app/">
+    <meta property="og:title" content="EUNJEE RUN | Portfolio">
+    <meta property="og:image" content="/og.png">
+    <meta property="og:description" content="꿈을 향해 달리는 은지 포트폴리오입니다.">
+    <meta property="og:site_name" content="EUNJEE RUN">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EUNJEE RUN | Portfolio</title>
