--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:image:height" content="630">
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     <title>EUNJEE RUN | Portfolio</title>
   </head>
   <body>
