docs. 메타 태그 추가

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <meta property="og:image:height" content="630">
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="KwonEunJee">
+    <meta name="keywords" content="React, Vite, Typescript, Pnpm" />
+    <meta name="description" content="픽셀 디자인을 직접하고 React, Vite, Typescript, Pnpm을 사용해 만든 포트폴리오 페이지입니다." />
     <title>EUNJEE RUN | Portfolio</title>
   </head>
   <body>
