refactor. preload로 최대 콘텐츠 렌더링 시간 요소 개선(LCP)

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="preload" as="image" href="/images/run/eunjee-run.webp">
     <meta charset="UTF-8" />
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://eunjeerun.vercel.app/">
     <meta property="og:title" content="EUNJEE RUN | Portfolio">
-    <meta property="og:image" content="/og.png">
+    <meta property="og:image" content="/og.webp">
     <meta property="og:description" content="꿈을 향해 달리는 은지 포트폴리오입니다.">
     <meta property="og:site_name" content="EUNJEE RUN">
     <meta property="og:locale" content="en_US">
